tests/machine/x/cpp/slice.error
line 12: ../../../tests/machine/x/cpp/slice.cpp: In function ‘int main()’:
../../../tests/machine/x/cpp/slice.cpp:12:35: error: request for member ‘size’ in ‘__tmp1’, which is of non-class type ‘int’
   12 |     for (size_t i = 0; i < __tmp1.size(); ++i) {
      |                                   ^~~~
../../../tests/machine/x/cpp/slice.cpp:15:44: error: invalid types ‘int[size_t {aka long unsigned int}]’ for array subscript
   15 |       std::cout << std::boolalpha << __tmp1[i];
      |                                            ^
../../../tests/machine/x/cpp/slice.cpp:21:35: error: request for member ‘size’ in ‘__tmp2’, which is of non-class type ‘int’
   21 |     for (size_t i = 0; i < __tmp2.size(); ++i) {
      |                                   ^~~~
../../../tests/machine/x/cpp/slice.cpp:24:44: error: invalid types ‘int[size_t {aka long unsigned int}]’ for array subscript
   24 |       std::cout << std::boolalpha << __tmp2[i];
      |                                            ^

 11 |     auto __tmp1 = std::vector<decltype(1)>{1, 2, 3}[1];
 12 |     for (size_t i = 0; i < __tmp1.size(); ++i) {
 13 |       if (i)
